// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

////// PROJECT ////// 

Project project_name {
  database_type: 'MySQL'
  Note: 'MySQL Schema for Instagram Data'
}

////// USER SCHEMA //////

Table USER.user {
  // PK and FK
  user_id integer [primary key] 
  account_type_id int [null, default: null]
  // Actual data
  user_name varchar(255) [unique, not null]
  full_name varchar(255) [null, default: null]
  is_verified bool [not null]
  is_business bool [not null]
  business_category_name varchar(255) [null, default: null]
  category_name varchar(255) [null, default: null]
  category varchar(255) [null, default: null]
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    user_name [name: 'user_name_index']
    account_type_id [name: 'account_type_index']
    full_name [name: 'full_name_index']
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }

}

Table USER.user_profile_setting {
  // PK and FK
  user_id integer [primary key]
  // Actual data
  profile_pic_url varchar(2000) [unique, not null]
  profile_pic_url_hd varchar(2000) [null]
  has_profile_pic bool [not null]
  has_bio bool [not null]
  bio varchar(255) [null, default: null]
  is_private bool [not null]
  external_url varchar(2000) [null, note: "External URL the Bio is linking to"]
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    (has_bio, bio) [name: 'has_bio_bio_index']
    is_private [name: 'is_privat_index']
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }

}

Table USER.user_contact_details {
  // PK and FK
  user_id integer [primary key]
  // Actual data
  contact_phone_number varchar(255) [null, default: null]
  public_phone_number varchar(255) [null, default: null]
  public_phone_country_code varchar(255) [null, default: null]
  business_contact_method varchar(255) [null, default: null]
  public_email varchar(255) [null, default: null]
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }

}

Table USER.user_adress {
  // PK and FK
  user_id integer [primary key]
  location_id integer [null]
  // Actual data
  longitude decimal(9,6) [null, default: null]
  latitude decimal(8,6) [null, default: null]
  street varchar(255) [null, default: null]
  city varchar(255) [null, default: null]
  zip varchar(255) [null, default: null]
  country varchar(255) [null, default: null]
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    location_id [name: 'location_id_index']
    (country, city) [name: 'country_city_index']
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }

}

// Lookup Table
Table USER.account_type {
  account_type_id integer [primary key]
  account_type varchar(255) [not null]

  indexes {
    account_type [unique, name: 'account_type_index']
  }
}

// Bridge Table
Table USER.follower {
  user_id integer [not null]
  follower_id integer [not null, note: "User which is following the account"]

  indexes {
    (user_id, follower_id) [pk] //, name: 'user_id_follower_id_index']
  }

}

////// LOCATION SCHEMA //////

Table LOCATION.location {
  // PK and FK
  location_id integer [primary key]
  // Actual data
  name varchar(255) [not null]
  category varchar(255) [null, default: null]
  longitude decimal(9,6) [null, default: null]
  latitude decimal(8,6) [null, default: null]
  street varchar(255) [null, default: null]
  city varchar(255) [null, default: null]
  zip varchar(255) [null, default: null]
  country varchar(255) [null, default: null]
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    name [name: 'name_index']
    (country, city) [name: 'country_city_index']
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }

}

Table LOCATION.location_contact_details {
  // PK and FK
  location_id integer [primary key]
  // Actual data
  phone_number varchar(255) [null, default: null]
  opening_hours varchar(255) [null, default: null] // Probably not the right type as source is dict
  website_url varchar(2000) [null, default: null]
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }
}


////// MEDIA SCHEMA //////

// STORY //

Table MEDIA.story {
  // PK and FK
  story_id integer [primary key]
  user_id integer [not null]
  media_id integer [not null]
  media_type_id integer [null]
  // Actual Data
  thumbnail_url varchar(2000) [null, default: null]
  video_url varchar(2000) [null, default: null]
  video_duration_seconds decimal(9,6) [null, default: null]
  product_type varchar(255) [null, default: null]
  publication_datetime datetime [not null] 
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    user_id [name: 'user_id_index']
    media_id [name: 'media_id_index']
    media_type_id [name: 'media_type_id_index']
    video_duration_seconds [name: 'video_duration_seconds_index']
    publication_datetime [name: 'publication_datetime_index']
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }
}

// Bridge Table
Table MEDIA.story_mention {
  story_id integer [not null]
  user_id integer [not null]
  is_sponsor bool [not null, default: False]

  indexes {
    (story_id, user_id) [pk ] //, name: 'story_id_user_id_index']
  }
}

// Bridge Table
Table MEDIA.story_location {
  story_id integer [not null]
  location_id integer [not null]

  indexes {
    (story_id, location_id) [pk] //, name: 'story_id_location_id_index']
  }
}

// Bridge Table
TABLE MEDIA.story_hashtag {
  story_id integer [not null]
  hashtag_id integer [not null]

  indexes {
    (story_id, hashtag_id) [pk] //, name: 'story_id_hashtag_id_index']
  }
}

// Bridge Table
Table MEDIA.story_media {
  story_id integer [not null]
  media_id integer [not null]

  indexes {
    (story_id, media_id) [pk] //, name: 'story_id_media_id_index']
  }
}

// MEDIA //

Table MEDIA.media {
  // PK and FK
  media_id integer [primary key]
  user_id integer [not null]
  location_id integer [null]
  media_type_id integer [null]
  // Actual Data
  title varchar(255) [null, default: null]
  caption varchar(255) [null, default: null]
  thumbnail_url varchar(2000) [null, default: null]
  product_type varchar(255) [null, default: null]
  video_url varchar(2000) [null, default: null]
  video_duration_seconds decimal(9,6) [null, default: null]
  has_comments_disabled bool [not null]
  publication_datetime datetime [not null]
  // Insert/Update Timestamps
  created_at "timestamp default CURRENT_TIMESTAMP" [not null, note:'create time']
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null, note:'update time']

  indexes {
    user_id [name: 'user_id_index']
    location_id [name: 'location_id_index']
    media_type_id [name: 'media_type_id_index']
    video_duration_seconds [name: 'video_duration_seconds_index']
    publication_datetime [name: 'publication_datetime_index']
    created_at [name: 'created_at_index']
    updated_at [name: 'updated_at_index']
  }

}

// Bridge Table
Table MEDIA.media_usertag {
  media_id integer [not null]
  user_id integer [not null]

  indexes {
    (media_id, user_id) [pk] //, 'media_id_user_id_index']
  }

}

// Bridge Table
Table MEDIA.media_hashtag {
  media_id integer [not null]
  hashtag_id integer [not null]

  indexes {
    (media_id, hashtag_id) [pk] //, 'media_id_hashtag_id_index']
  }

}

// Bridge Table
Table MEDIA.media_sponsor {
  media_id integer [not null]
  user_id integer [not null]

  indexes {
    (media_id, user_id) [pk] //, name, 'media_id_user_id_index']
  }

}

// MEDIA + STORY //

// Lookup Table
Table MEDIA.media_type {
  media_type_id integer [primary key]
  type varchar(255)

  indexes {
    type [unique, name: 'type_index']
  }

}

// HASHTAG //

Table MEDIA.hashtag {
  hashtag_id integer [primary key]
  hashtag_name varchar(255) [not null, unique]
  profile_pic_url varchar(2000) [null]
  has_profile_pic bool [not null]

  indexes {
    hashtag_name [name: 'hashtag_name_index']
    has_profile_pic [name: 'has_profile_pic_index']
  }

}

Table MEDIA.related_hashtag {
  hashtag_id integer [not null]
  related_hashtag_id integer [null]

  indexes {
    (hashtag_id, related_hashtag_id) [pk] //, name: 'hashtag_id_related_hashtag_id_index']
  }
}

////// STATISTIC SCHEMA //////

Table STATISTIC.user_cumulated_statistic {
  user_id integer [not null]
  statistic_date date [not null, note: "Date the Statistics are referring to"]
  cumulated_follower_count integer [not null, note: "Number of accounts that are following this account"]
  cumulated_following_count integer [not null, note: "Number of accounts the account is following"]
  cumulated_media_count integer [not null]

  indexes {
    (statistic_date, user_id) [pk] //, name: 'statistic_date_user_id_index']
  }

}

Table STATISTIC.media_cumulated_statistic {
  media_id integer [not null]
  statistic_date date [not null, note: "Date the Statistics are referring to"]
  cumulated_like_count integer [not null, default: 0]
  cumulated_comment_count integer [not null, default: 0]
  cumulated_play_count integer [not null, default: 0]
  cumulated_view_count integer [not null, default: 0]
  cumulated_mention_count integer [not null, default: 0]

  indexes {
    (statistic_date, media_id) [pk] //, name: 'statistic_date_media_id_index']
  }

}

Table STATISTIC.story_cumulated_statistic {
  story_id integer [not null]
  statistic_date date [not null, note: "Date the Statistics are referring to"]
  cumulated_like_count integer [not null, default: 0]
  cumulated_comment_count integer [not null, default: 0]
  cumulated_play_count integer [not null, default: 0]
  cumulated_mention_count integer [not null, default: 0]

  indexes {
    (statistic_date, story_id) [pk] //, name: 'statistic_date_story_id_index']
  }

}

Table STATISTIC.location_cumulated_statistic {
  location_id integer [not null]
  statistic_date date [not null, note: "Date the Statistics are referring to"]
  cumulated_like_count integer [not null, default: 0]

  indexes {
    (statistic_date, location_id) [pk] //, name: 'statistic_date_location_id_index']
  }

}

Table STATISTIC.hashtag_cumulated_statistic {
  hashtag_id integer [not null]
  statistic_date date [not null, note: "Date the Statistics are referring to"]
  cumulated_media_count integer [not null, default: 1]

  indexes {
    (statistic_date, hashtag_id) [pk] //, name: 'statistic_date_hashtag_id_index']
  }

}

////// RELATIONSHIPS //////

//// User ////
Ref: USER.user.user_id - USER.user_adress.user_id [delete: cascade, update: cascade]
Ref: USER.user.user_id - USER.user_profile_setting.user_id [delete: cascade, update: cascade]
Ref: USER.user.user_id - USER.user_contact_details.user_id [delete: cascade, update: cascade]
Ref: USER.user.account_type_id > USER.account_type.account_type_id [delete: set null, update: cascade]
Ref: USER.user.user_id < USER.follower.user_id [delete: cascade, update: cascade]
Ref: USER.user_adress.location_id > LOCATION.location.location_id // Note sure as both tables will probably be loaded independetly. If dependant on each other -> [delete: set null, update: cascade]
Ref: USER.user.user_id < STATISTIC.user_cumulated_statistic.user_id [delete: cascade, update: cascade]

//// Media ////
Ref: MEDIA.media.media_type_id > MEDIA.media_type.media_type_id  [delete: set null, update: cascade]
// First level
Ref: MEDIA.media.media_id < MEDIA.media_sponsor.media_id [delete: cascade, update: cascade]
Ref: MEDIA.media.media_id < MEDIA.media_hashtag.media_id [delete: cascade, update: cascade]
Ref: MEDIA.media.media_id < MEDIA.media_usertag.media_id [delete: cascade, update: cascade]
// Second levl
Ref: MEDIA.media_hashtag.hashtag_id > MEDIA.hashtag.hashtag_id [delete: cascade, update: cascade]
Ref: MEDIA.media_sponsor.user_id > USER.user.user_id [delete: cascade, update: cascade]
Ref: MEDIA.media_usertag.user_id > USER.user.user_id [delete: cascade, update: cascade]
// Statistic
Ref: MEDIA.media.media_id < STATISTIC.media_cumulated_statistic.media_id [delete: cascade, update: cascade]

//// Story ////
Ref: MEDIA.story.media_type_id > MEDIA.media_type.media_type_id [delete: set null, update: cascade]
// First level
Ref: MEDIA.story.story_id < MEDIA.story_mention.story_id [delete: cascade, update: cascade]
Ref: MEDIA.story.story_id < MEDIA.story_location.story_id [delete: cascade, update: cascade]
Ref: MEDIA.story.story_id < MEDIA.story_hashtag.story_id [delete: cascade, update: cascade]
// Second level
Ref: MEDIA.story_mention.user_id > USER.user.user_id [delete: cascade, update: cascade]
Ref: MEDIA.story_location.location_id > LOCATION.location.location_id [delete: cascade, update: cascade]
Ref: MEDIA.story_hashtag.hashtag_id > MEDIA.hashtag.hashtag_id [delete: cascade, update: cascade]
// Statistic
Ref: MEDIA.story.story_id < STATISTIC.story_cumulated_statistic.story_id [delete: cascade, update: cascade]

//// Hashtag ////
Ref: MEDIA.hashtag.hashtag_id < MEDIA.related_hashtag.hashtag_id [delete: cascade, update: cascade]
Ref: MEDIA.hashtag.hashtag_id < STATISTIC.hashtag_cumulated_statistic.hashtag_id [delete: cascade, update: cascade]

//// Location ////
Ref: LOCATION.location.location_id < LOCATION.location_contact_details.location_id [delete: cascade, update: cascade]
Ref: LOCATION.location.location_id < STATISTIC.location_cumulated_statistic.location_id [delete: cascade, update: cascade]
